QPID-7127: setting idle timeout to ffffffff fires ConnectionTicker with zero timeout

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1733966 13f79535-47bb-0310-9956-ffa450edef68